--- a/06-ms-integrativebiology.qmd
+++ b/06-ms-integrativebiology.qmd
@@ -1,106 +1,172 @@
-# MS Integrative Biology
+# M.S. Integrative Biology
 
-## Program Description 
+## Program Description
 
+### Degree Overview
+
+Students in the M.S. Integrative Biology program develop a plan of study in consultation with their advisor and Master’s Thesis Committee. The program includes required core courses and competencies, thesis research, and professional development.
+
+Completion of at least **30 credits** is required, including research credits. Students develop a thesis proposal within the first year and complete thesis research (typically 6–10 credits). The degree is awarded when:
+
+- Thesis research results are deemed acceptable  
+- A formal public thesis presentation and defense has occurred  
+- The thesis is approved by the Thesis Committee and accepted by the Graduate School  
+
+All students are expected to present research publicly (including at the UNH Graduate Research Conference) and to gain teaching and/or mentoring experience.
+
+---
+
+## Credit Requirements
+
+The M.S. degree requires a minimum of **30 total credits**, including:
+
+- **6–10 credits** of thesis research (BIOL 899 – Master’s Thesis)  
+- Required coursework and competencies (outlined below)
+
+Up to **8 graduate credits** may be transferred from another institution if:
+- They were not counted toward another degree  
+- A grade of B or higher was earned  
+- The transfer is approved by the advisor, committee, and Graduate School  
+
+Students admitted through the **Accelerated Master’s (AM)** program may apply up to **12 credits** of prior upper-level UNH coursework, in accordance with AM policies.
+
+---
+
+## Required Courses and Competencies
+
+All M.S. Integrative Biology students must complete the following:
+
+**Core Course**
+- **BIOL 901 – Introductory Graduate Seminar**  
+  A first-semester course focusing on key information and skills for a successful transition into graduate study, including program expectations and cohort building.
+
+**Experimental Design and Analysis (2 courses)**
+- Two courses in experimental design and analysis  
+- May be fulfilled by prior approved graduate coursework or by completing two graduate-level courses  
+
+**Writing and Communication (1 course)**
+- May be fulfilled by prior graduate coursework (if approved) or by completing a graduate-level course  
+- Recommended courses often include:  
+  - BIOL 902 – Writing and Publishing Science (typically fall)  
+  - BIOL 950 – Scientific Communication (typically spring)
+
+**Ethics Requirement**
+Students may fulfill the ethics requirement by either:
+- Completing the Responsible Conduct of Research (RCR) training workshop, or  
+- Completing a graduate-level ethics course
+
+**Electives**
+Students work with their advisor and committee to select additional coursework aligned with their area of specialization and career goals.
+
+---
 
 ## Learning Outcomes
 
+- Core Knowledge: Demonstrate advanced knowledge within the subdiscipline relevant to the thesis research and broad knowledge of biology.
+- Critical Thinking: Critically evaluate qualitative and quantitative biological research to develop novel hypotheses.
+- Research: Apply appropriate research methods and analytical techniques to address a meaningful gap in the field.
+- Communication: Effectively communicate scientific concepts, methods, and findings to scientific audiences, stakeholders, and the public.
+- Professionalism: Conduct research ethically and responsibly while engaging with the broader scientific community.
+
+---
 
 ## Program Requirements and Timeline
 
-### Credit Requirements
+## Enrollment, Registration, and Credit Policies
 
-The M.S. degree requires completion of a minimum of 30 credits, 6-¬10 of which are earned for thesis research (BIOL 899 Master's Thesis ). 
+Graduate students must maintain continuous enrollment in fall and spring through coursework, research registration, or continuing enrollment.
 
-There is no specific credit requirement for the Ph.D., though students must meet curriculum requirements.
+**Full-time status:**
+- 9+ credits, or  
+- Master’s research (GRAD 900), or  
+- Holding an assistantship (minimum 6 credits or GRAD 900)
 
-Up to 8 graduate credits from another institution may be transferred, provided the credits were not counted toward another degree, and the course grade was a B or higher. Petitions requesting transfer credit must be supported by the advisor and graduate committee, and approved by the UNH Graduate School.
-Students admitted via the Accelerated Master's (AM) process may apply up to 12 credits of prior upper-level UNH coursework in accordance with AM policies.
+Students registered for continuing enrollment (GRAD 800) are not eligible for assistantships.
 
-The level of the courses taken to meet registration requirements is not specified. However, taking non-graduate classes does not move one towards degree completion, so taking undergraduate classes is not a common practice. A grad student cannot petition to take a 500-level course, however 500-level courses can be audited by graduate students with the cost of the course at the expense of the graduate student.
+Students should consult their advisor regarding appropriate course load based on research, teaching, and field obligations.
 
-Students should discuss with their advisor and committee which courses will be most useful, and what course load makes sense in light of specific research and assistantship obligations (for example, an intense field season). 
+### Course and Credit Policies
 
-How many credits to take, and financial implications: 
+**Graduate Courses**
+- 800- and 900-level courses count toward degree requirements  
+- Must be taken for a letter grade (if graded option available)
 
-Graduate students are normally required to maintain continuous enrollment each Fall and Spring semester by registering for courses, research (Grad 900/BIOL 999), or continuing enrollment (Grad 800) (see below for distinctions). Students who don’t register for the Fall and Spring semesters will have their degree status discontinued.
+**700-Level Courses**
+- Up to 12 credits may count toward graduate degree (by petition)  
+- Must be outside the student’s program  
+- Must include additional graduate-level requirements  
 
-Graduate students registered for 9 or more credits, Master's Continuing Research (Grad 900), or Doctoral Research (999) are classified as full-time students. Students holding assistantship appointments are also considered full time and must register for a minimum of 6 credits, or Master's Continuing Research (Grad 900). Students registered for Continuing Enrollment (GRAD 800) are not eligible to hold an appointment. For details, please see the Graduate School website (https://catalog.unh.edu/graduate/course- descriptions/grad).
+**Undergraduate Courses (<700 level)**
+- May be taken if necessary for background preparation  
+- Do not count toward graduate degree credits  
 
-Students on assistantships (TA or RA) pay reduced mandatory fees (fee information: https://www.unh.edu/business-services/tuitgrad); this benefit applies no matter how many credits you’re taking. Tuition is commonly waived or covered for students on TA or RA appointments; however, mandatory fees remain the responsibility of the student. Students on assistantship in the spring semester can have tuition waived for summer courses offered by the Graduate School (GRAD prefix).
+**Audited Courses**
+- Allowed with advisor and instructor approval  
+- Count toward enrollment requirements but not degree credits  
 
-Students enrolled for more than 16 credits pay additional tuition based on the number of additional credits (https://www.unh.edu/business-services/tuitgrad). 
+**Transfer Credit**
+- Up to 8 credits may be transferred (B or higher; not counted toward another degree)  
+- Transfer request form: https://gradschool.unh.edu/academics/forms-policies  
 
-Tuition and fee information from UNH Business Services is available at https://www.unh.edu/business-services/tuitgrad; Graduate School information about fees and financial support is at  https://catalog.unh.edu/graduate/general-information/fees-financial-support/ .
+### Tuition, Fees, and Financial Support
 
-Which courses count:
+Students on assistantships (TA or RA) typically receive tuition support, and pay reduced mandatory fees. Mandatory fees remain the responsibility of the student.
 
-Graduate courses are numbered 800- or 900-level. Course descriptions can be found in the online Graduate Course Catalog (https://catalog.unh.edu/graduate/). If there is a graded option, graduate courses may not be taken Pass/Fail.
+- Tuition and fee information (UNH Business Services): https://www.unh.edu/business-services/tuitgrad  
+- Graduate School fee and financial support information: https://catalog.unh.edu/graduate/general-information/fees-financial-support/
 
-Graduate credit for 700-level courses: 700-level courses are advanced undergraduate courses. In rare cases graduate degree students may petition to earn graduate credit for up to 12 credits in 700-­level courses, provided the credits are taken in a program other than the one in which the student is seeking the degree and provided such courses are approved by the student's adviser, graduate program coordinator, and the dean of the Graduate School. Such courses must be taken for a letter grade. Petitions must include what additional requirements or expectations will be required of the student to make the course a graduate level experience.  Petition requests must be made prior to enrolling in the course and are not guaranteed.  Petition forms are available at https://gradschool.unh.edu/academics/forms-policies.
+Students enrolled in more than 16 credits pay additional tuition for credits beyond 16.
 
-Undergraduate courses below 700-level: While taking non-graduate classes is generally discouraged, in some cases, graduate students may need background or training that can best be obtained by taking an upper-level undergraduate class, if no equivalent course is offered at the graduate level. Undergraduate level courses taken by graduate students are billed at the graduate rate, must be taken for a letter grade, and are subject to the Graduate School’s failing grade policy. Courses taken below the 700-level cannot count as graduate credit.
+### Useful Links
 
-Audits: Graduate students may audit courses with the approval of their advisor and the instructor. Credits for an audited course in which a graduate student is formally enrolled may be counted toward enrollment requirements for appointments and assistantships. (Note that tuition for audited courses is the same as for credit courses.)
+- Graduate School enrollment policies and forms: https://gradschool.unh.edu/academics/forms-policies  
+- UNH Course Search: https://courses.unh.edu/  
+- Graduate course catalog: https://catalog.unh.edu/graduate/  
+- Graduate student resources and deadlines: https://gradschool.unh.edu/graduate-student-resources  
 
-Graduate credit from another institution: Students can request to transfer up to 8 credits of graduate credit from another school, provided the credits were not counted toward another degree, and the grade was at least a B. The transfer request form is available at (https://gradschool.unh.edu/academics/forms-policies). 
+---
 
-Where to find enrollment policy, course and registration information:
-• Graduate School enrollment policies and petition forms: https://gradschool.unh.edu/academics/forms-policies
-• the UNH Course Search Form searches all courses (grad and undergrad) (https://courses.unh.edu/)https://courses.unh.edu/
-• descriptions of graduate courses are in the online catalog https://catalog.unh.edu/graduate/
-• registration information and deadlines are posted at the Graduate School website https://gradschool.unh.edu/graduate-student-resources 
+## Research Proposal
 
+M.S. students must have their thesis proposal approved by their advisor and Thesis Committee by the end of the **second semester**.
 
-### Research Proposal
-M.S. students must have their proposal approved by their advisor and Thesis Committee by the end of the second semester. 
+---
 
-### Annual Progress Report and Review Meeting
-Each student will meet with a representative of the Graduate Program Committee in the spring semester to review progress and identify any concerns. The purpose of this meeting is to:
+## Annual Progress Review
 
-1) Encourage the student to think critically about his/her own progress (or lack thereof) and goals for both the immediate and long-term future.
+Each spring, students participate in an annual progress review with a representative of the Graduate Program Committee.
 
-2) Increase a sense of accountability on behalf of graduate students, and motivate students moving at a slow pace to increase their productivity and involvement in the program.
+**Goals of the review:**
+- Encourage reflection on progress and goals  
+- Support timely degree completion  
+- Provide mentorship and feedback  
+- Document progress and address concerns  
 
-3) Remind students that to be a truly successful graduate student, one should (ideally) demonstrate success in multiple areas (research, funding, teaching, service), and provide examples for how to do that.
+**Preparation includes:**
+- Student progress report submitted to advisor and committee  
+- Advisor evaluation and summary of committee meeting  
+- Teaching feedback (if applicable)
 
-4) Provide a clear paper trail in case situations arise in which there is confusion or disagreement about a student's progress.
+All materials are submitted to the designated departmental staff member, who schedules the review meeting (typically mid-April through mid-May). Summary feedback is shared with the student, advisor, and Program Coordinator. Failure to complete the process may result in a registration hold.
 
-The annual meeting also provides an opportunity for students to raise any concerns, and provide feedback about the program and their graduate experience.
+---
 
-In preparation for progress review meetings, 
-• The student writes a report about their progress, and submits it to their advisor and committee for review and comments. This should occur in the first half of the spring semester. Instructions and template for the student report are available at the program website, or from the department. 
-• The advisor reviews and signs the student’s report, and then also fills out an evaluation describing his/her view of the student's progress, and including a summary of the most recent committee meeting – which should take place earlier in the same semester. Instructions and template for the advisor report are available at the program website, or from the department. Reports must be submitted at least one week before scheduled meetings, normally by mid-April.
-• Instructors for whom the student has served as a teaching assistant provide comments on their teaching. (If instructors have previously provided feedback as part of fellowship or other applications, they needn’t do so again.) Comments must be submitted at least one week before scheduled meetings, normally by mid-April.
+## Completing the Degree
 
-All reports and comments will be submitted to the designated departmental staff person, who will schedule a review meeting for each student with a member of the GPC (not including the advisor or, preferably, other members of the student’s committee), normally between mid-April and mid-May. 
+Students are responsible for understanding all program and Graduate School requirements, including:
 
-Following the meetings, comments and suggestions will be shared with the student and advisor, as well as the Program Coordinator. If there is material in the comments that is confidential or should not be shared, it may be withheld at the discretion of the Program Coordinator.
+- Coursework and competency requirements  
+- Committee formation and required paperwork  
+- Thesis formatting and submission requirements  
+- Defense scheduling procedures and deadlines  
 
-Students who do not complete the review process by the specified date will have a hold placed on their registration by the Graduate School until they have resolved the situation.
+A public seminar and thesis defense are required. The thesis must be provided to the committee at least **two weeks** before the defense.
 
-### Completing the Degree
+Final thesis submission must meet Graduate School deadlines and formatting requirements.
 
-As a graduate student, you are responsible for knowing what you need to do to get your degree: your advisor and committee should offer guidance, but the primary responsibility is yours. Make sure you are thoroughly familiar with:
+---
 
-• the program’s academic requirements (credits, courses, competencies);
-• necessary paperwork (committee nomination, Ph.D. candidacy, etc.);
-• thesis/dissertation format and filing requirements (set by the Graduate School);
-• format and scheduling procedures for qualifying exams and thesis/dissertation defense; and all relevant deadlines.
+## Graduation
 
-If you have questions about what you need to do, or how to do it, consult your advisor, the Program Coordinator, and/or the UNH Graduate School. If there is information you think needs to be added or clarified in this handbook, please tell the Program Coordinator.
-
-For both the MS thesis and Ph.D. dissertation students are required to give a public, advertised seminar on the UNH campus, followed by a private examination by the student's committee, which may require revisions. The committee is responsible for assessing and approving the final version of the thesis. The committee should be provided with a complete copy of the thesis for review at least two full weeks before the defense.
-
-The student is responsible for transmitting necessary paperwork to the Graduate School, and fulfilling Graduate School requirements for electronic submission of the thesis, by the appropriate deadline.
-
-
-### Graduation
-
-The Graduate School website provides detailed information on graduation procedures, including deadlines, filing “intent to graduate” notification, submitting theses/dissertations to the Graduate School, and Commencement: http://www.gradschool.unh.edu/graduation.php
-
-
-### Student Rights and Key Policies
-
-UNH’s statement on Student Rights, Rules, and Responsibilities applies to graduate students as well as to undergraduates. It can be found at https://catalog.unh.edu/srrr/ 
-See Graduate School Catalog for general information, policies, and student rights: https://catalog.unh.edu/graduate/
+The Graduate School provides detailed procedures and deadlines for graduation, including intent-to-graduate forms, thesis submission, and Commencement:  
+http://www.gradschool.unh.edu/graduation.php
